<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Story App</string>
    <string name="welcome_to_story_app">Welcome to Story App!</string>
    <string name="description_welcome_screen">Share your daily life about Android, IOS, Machine Learning, Cloud Computing in the Story App!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="no_have_account">You don\'t have account?</string>
    <string name="welcome">Welcome to Story App</string>
    <string name="desc_welcome">Fill your data first!</string>
    <string name="msgLoginPage">Input your data first!</string>
    <string name="forgetPw">Forget Password?</string>
    <string name="title_signUp">Complete your data!</string>
    <string name="title_signIn">You Ready?</string>
    <string name="desc_menu">Short Description</string>
    <string name="description">Description</string>
    <string name="retry">Retry</string>
    <string name="camera">Camera</string>
    <string name="cameraX">Camera X</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="emptyImage">Put picture first!</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="date_desc">Date Post</string>
    <string name="error_create_image_uri">Failed to create image URI</string>
    <!--harcoded-->
    <string name="enter_your_username">Enter your username</string>
    <string name="minimum_username_two_words_with_space">Minimum username two words with space</string>
    <string name="username_only_allow_character_and_space">Username only allow character and space</string>
    <string name="maximum_60_character">Maximum 60 character</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="gagal_mengambil_gambar">Gagal mengambil gambar.</string>
    <string name="gagal_memunculkan_kamera">Gagal memunculkan kamera.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="successful">Successful</string>
    <string name="message_successfully">You have logged in successfully</string>
    <string name="wrong">Wrong!</string>
    <string name="wrong_email_or_password">Wrong email or password!</string>
    <string name="back">Back</string>
    <string name="continue_action">Continue</string>
    <string name="register_successfully">Your account has been registered</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="permission_required">Location permission is required for this feature.</string>
    <string name="download_failed">Download Failed</string>
    <string name="an_error_occurred_during_download">An error occurred during download</string>
    <string name="download_complete">Download Complete</string>
    <string name="image_saved_to_gallery">Image saved to gallery</string>
    <string name="downloading_image">Downloading image</string>
    <string name="download_in_progress" tools:ignore="TypographyEllipsis">Download in progress...</string>
    <string name="download_image">Download Image</string>
    <string name="do_you_want_to_download_this_image">Do you want to download this image?</string>
    <string name="format_time_input">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="format_time_output">dd MMMM yyyy, HH:mm:ss</string>
    <string name="utc">UTC</string>
    <string name="asia_jakarta">Asia/Jakarta</string>
    <string name="id">id</string>
    <string name="country">ID</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="download_notifications">Download Notifications</string>
    <string name="notifications_for_image_downloads">Notifications for image downloads</string>
    <string name="notification_permission_denied">notification denied</string>
    <string name="notification_permission_turn_off">notification turn off</string>
    <string name="emptyDescription">Input Description</string>
    <string name="lokasi_dinonaktifkan">Lokasi dinonaktifkan</string>
    <string name="lokasi_tidak_tersedia">Lokasi tidak tersedia</string>
    <string name="lokasi_diaktifkan">lokasi diaktifkan</string>
    <string name="image_view">Image View</string>
</resources>