<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.page.StoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.423" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="51dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_place_holder"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/cameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="150dp"
            android:text="@string/camera"
            app:layout_constraintBottom_toTopOf="@id/uploadBtn"
            app:layout_constraintEnd_toStartOf="@id/cameraXBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/galleryBtn"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintVertical_bias="0.346" />

        <Button
            android:id="@+id/cameraXBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cameraX"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cameraBtn"
            app:layout_constraintTop_toTopOf="@id/cameraBtn"
            app:layout_constraintHorizontal_bias="0.5"
            />

        <Button
            android:id="@+id/galleryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/gallery"
            app:layout_constraintBottom_toBottomOf="@id/cameraBtn"
            app:layout_constraintEnd_toStartOf="@id/cameraBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.0"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/cameraXBtn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="8"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvShareStoryLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Include Location"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/txtLayout"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textStyle="bold"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchLocation"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@+id/tvShareStoryLocation"
            app:layout_constraintBottom_toBottomOf="@+id/tvShareStoryLocation"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/uploadBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/upload"
            android:elevation="2dp"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@id/switchLocation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>